[gd_scene load_steps=7 format=3 uid="uid://jjbfuydf4hki"]

[ext_resource type="Script" uid="uid://b2dv4h1fw8hlw" path="res://Player/player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://dcuy4es408t82" path="res://Player/grapple_controller.gd" id="2_onrkg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sh265"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sh265"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4flbx"]

[sub_resource type="CylinderMesh" id="CylinderMesh_onrkg"]
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_4flbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_sh265")

[node name="Model" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model"]
mesh = SubResource("CapsuleMesh_sh265")
skeleton = NodePath("../..")

[node name="CameraPivot" type="Node3D" parent="."]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 1.6, 0)
shape = SubResource("SphereShape3D_4flbx")
spring_length = 5.0

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, 0, 0, 5)

[node name="SwingRaycast" type="RayCast3D" parent="CameraPivot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.984807, -0.173648, 0, 0.173648, 0.984807, -0.00307333, -1.47558, -0.710667)
visible = false
target_position = Vector3(0, 0, -2)
debug_shape_custom_color = Color(0.607843, 0, 0, 1)
debug_shape_thickness = 5

[node name="SwingController" type="Node3D" parent="."]
script = ExtResource("2_onrkg")

[node name="Arms" type="Node3D" parent="SwingController"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0.35, 0)

[node name="LeftArm" type="Node3D" parent="SwingController/Arms"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.001, -0.3, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SwingController/Arms/LeftArm"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.001, 0, -0.5)
mesh = SubResource("CylinderMesh_onrkg")

[node name="LeftArmCast" type="RayCast3D" parent="SwingController/Arms/LeftArm"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -1.1, 0)
collision_mask = 5
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="RightArm" type="Node3D" parent="SwingController/Arms"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.001, 0.3, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SwingController/Arms/RightArm"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.001, 0, -0.5)
mesh = SubResource("CylinderMesh_onrkg")

[node name="RightArmCast" type="RayCast3D" parent="SwingController/Arms/RightArm"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -1.1, 0)
collision_mask = 5
debug_shape_custom_color = Color(1, 0, 0, 1)
